# OpenTTD_bot

./: .gitignore  README.md  bot.py  messages.json  pyproject.toml
openttd_bot/: __init__.py  config.py  core.py  messages.py  messenger.py  models.py  runner.py  state.py
src/openttd_bot/: core.py  messages.py  messenger.py  runner.py  state.py
tests/: test_bot.py  test_messenger.py
